button login fixed

--- a/Desafios/Nivel 03/Desafio 01 - Stone/index.html
+++ b/Desafios/Nivel 03/Desafio 01 - Stone/index.html
@@ -32,7 +32,7 @@
       <nav class="right-nav">
         <a href="" class="item-nav">Atendimento</a>
         <a href="" class="item-nav">Baixa o app</a>
-        <a href="" class="item-nav">Login</a>
+        <a href="" class="item-nav item-login">Login</a>
         <a href="" class="item-nav button-nav">Seja Stone</a>
       </nav>
     </header>
