--- a/Desafios/Nivel 03/Desafio 03 - Lista de Tarefas/index.html
+++ b/Desafios/Nivel 03/Desafio 03 - Lista de Tarefas/index.html
@@ -22,7 +22,7 @@
       <h1 class="title"><img src="./assets/task.svg" alt="">Adicionar uma tarefa</h1>
       <div class="add-task">
         <input class="input-task" type="text" placeholder="Descreva a tarefa" id="textTask">
-        <button class="click-task" id="addTask">Criar tarefa</button>
+        <button class="click-task" id="addTask" onclick="addTask()">Criar tarefa</button>
       </div>
     </div>
 
